--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css"
     integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">
     <link href="css/fontawesome-free-5.13.0-web/css/fontawesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="static/css/custom.css">
   <title>Hello, world!</title>
 </head>
 
