part2 what we offer

--- a/index.html
+++ b/index.html
@@ -122,19 +122,98 @@
 
 <!-- Carousel End -->
 
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam iusto, possimus explicabo dolore ipsa hic nostrum nam, sunt perferendis fuga autem, delectus quae tempora amet doloremque animi aperiam distinctio illo.
+<!-- WHY SMART INVEST -->
+
+<div  style="background-color:#f1f1f1;height:100%;width:100%">
+<div style ="margin:auto; padding:auto">
+    <p class = "h1  p-5 m-5" style= "font-family:fantasy ; color:#8C001A; border-bottom:#8C001A dashed ;width:40%">
+      WHY SMART INVEST
+    </p>
+  <div class="row ">
+    <div class="col-md-4 m-auto">
+      <div class="card container2 mt-5" style="width: 20rem; margin:auto; padding : 20px">
+        <img class=" image card-img-top p-2 m-2 border-bottom border-danger" src="static/imgs/icons/market-research.png" alt="Card image cap">
+        
+        <div class="card-body">
+          <h4 class="card-title  text-success"> Market Research </h4>
+          <div class="overlay">
+            <div class="text">
+             <a href="http://" target="_blank" rel="noopener noreferrer"><h4 class="card-title  text-success"> Market Research </h4></a>
+            <p>
+Don't have time to trade every day? Say goodbye to, intraday trading and join , a product dedicated to long term
+traders. Make investments based on high-yielding , you believe in.
+            </p>
+             </div>
+          </div>
+      
+        </div>
+      </div>
+    </div>
 
 
 
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam iusto, possimus explicabo dolore ipsa hic nostrum nam,
-sunt perferendis fuga autem, delectus quae tempora amet doloremque animi aperiam distinctio illo.
+    <div class="col-md-4 m-auto">
+<div class="card container2 mt-5" style="width: 20rem; margin:auto; padding : 20px">
+  <img class=" image card-img-top p-2 m-2 border-bottom border-danger" src="static/imgs/icons/survey.png"
+    alt="Card image cap">
+
+  <div class="card-body">
+    <h4 class="card-title  text-success"> Market Pro </h4>
+    <div class="overlay">
+      <div class="text">
+        <a href="http://" target="_blank" rel="noopener noreferrer">
+          <h4 class="card-title  text-success"> Market Pro </h4>
+        </a>
+        <p>
+      Select from our wide range of short term products designed for equity and commodity market. Trade, based on signals
+      derived by our fundamental and technical analysts.
+        </p>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+    </div>
+    <div class="col-md-4 m-auto p-auto">
+<div class="card container2 mt-5" style="width:20rem; margin:auto; padding : 20px">
+  <img class=" image card-img-top p-2 m-2 border-bottom border-danger" src="static/imgs/icons/social-care.png"
+    alt="Card image cap">
+
+  <div class="card-body">
+    <h4 class="card-title  text-success">Support</h4>
+    <div class="overlay">
+      <div class="text">
+        <a href="#" target="_blank" rel="noopener noreferrer">
+          <h4 class="card-title  text-success"> Support </h4>
+        </a>
+        <p>
+        A support or support level is a financial term that refers to the price level that historically a stock does not fall
+        below. Buyers tend to purchase the stock at this level
+        </p>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+    </div>
+ 
+ 
+  </div>
 
 
+  
 
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam iusto, possimus explicabo dolore ipsa hic nostrum nam,
-sunt perferendis fuga autem, delectus quae tempora amet doloremque animi aperiam distinctio illo.
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam iusto, possimus explicabo dolore ipsa hic nostrum nam,
-sunt perferendis fuga autem, delectus quae tempora amet doloremque animi aperiam distinctio illo.
+
+</div>
+
+
+</div>
+
+<!-- why smart invest end  -->
+
+
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
