--- a/index.html
+++ b/index.html
@@ -229,11 +229,11 @@ traders. Make investments based on high-yielding , you believe in.
 
 
 <!-- features -->
-<div class = "full_screen  " style="background-color:#f1f1f1 ;color : #484971;" >
+<div class = "full_screen mb-5  " style="background-color:#f1f1f1 ;color : #484971;" >
  
 
 <h1 style="color: #8C001A; font-weight: bold; font-family:fantasy;" class=" m-5 p-2">Why Choose Us ?</h1>
-<hr style="background-color:#680c45; height: 3px; width: 10% ">
+<hr style="background-color:#680c45; height: 3px; width: 20%; margin-left:50px ">
 <div class="container">
 <div class="row">
 
@@ -339,8 +339,8 @@ traders. Make investments based on high-yielding , you believe in.
 <!-- End features  -->
 
 <!-- Contact Form  -->
-<div class="container mt-5 ">
-<div class="row">
+<div class="container mt-5  ">
+<div class="row border-bottom border-danger">
   <div class="col-md-12 m-4 ">
     <h3 style = "color:#8C001A ; font-family:fantasy" class="mx-auto">
        Submit any queries/complaints here
