--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ traders. Make investments based on high-yielding , you believe in.
 
 
 <!-- features -->
-<div class = "full_screen mb-5  " style="background-color:#f1f1f1 ;color : #484971;" >
+<div class = "full_screen mb.-5  " style="background-color:#f1f1f1 ;color : #484971;" >
  
 
 <h1 style="color: #8C001A; font-weight: bold; font-family:fantasy;" class=" m-5 p-2">Why Choose Us ?</h1>
