--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
 <!-- WHY SMART INVEST -->
 
-<div  class = "container-fluid m-5  " style="height:auto ;">
+<div  class = "container-fluid my-5" style="height:auto ;">
 <div >
     <h1 style="color: #8C001A; font-weight: bold; font-family:fantasy;" class=" m-5 p-2">Why Smart Invest ?</h1>
     <hr style="background-color:#680c45; height: 3px; width: 20%; margin-left:50px ">
@@ -238,7 +238,7 @@ traders. Make investments based on high-yielding , you believe in.
 
 
 <!-- features -->
-<div class = " container-fluid my-5 p-2 " style="background-color:#f1f1f1 ;color : #484971;" >
+<div class = " container-fluid my-5  p-2 " style="background-color:#f1f1f1 ;color : #484971;" >
  
 
 <h1 style="color: #8C001A; font-weight: bold; font-family:fantasy;" class=" m-5 p-2">Why Choose Us ?</h1>
@@ -349,7 +349,7 @@ traders. Make investments based on high-yielding , you believe in.
 
 <!-- Contact Form  -->
 <div class="container-fluid my-5   ">
-   <h1 style="color: #8C001A; font-weight: bold; font-family:fantasy;" class=" m-5 p-2">Queries/feedback Form </h1>
+   <h1 style="color: #8C001A; font-weight: bold; font-family:fantasy;" class=" m-5 p-2"> Queries / Feedback Form </h1>
    <hr style="background-color:#680c45; height: 3px; width: 20%; margin-left:50px ">
    <div class="container my-5 ">
      <div class="form">
@@ -393,7 +393,7 @@ traders. Make investments based on high-yielding , you believe in.
 <!-- Contact Form End  -->
 
 <!-- contact details -->
-<div class="container-fluid py-5" style="background-color : #f1f1f1;">
+<div class="container-fluid my-5" style="background-color : #f1f1f1;">
 <h1 style="color: #8C001A; font-weight: bold; font-family:fantasy;" class=" m-5 p-2">Contact us</h1>
 <hr style="background-color:#680c45; height: 3px; width: 20%; margin-left:50px ">
 <div class="row text-center mt-5" style="color:#484971">
